--- a/contact.html
+++ b/contact.html
@@ -114,29 +114,13 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-10 col-12 mt-5 ms-auto">
-              <div class="row">
-                <div class="col-6 border-end contact-info">
-                  <h6 class="mb-3">e-mail</h6>
+              <div class="col-6 border-top contact-info">
+                <h6 class="mb-3">e-mail</h6>
 
-                  <a href="mailto:kic8462852@naver.com" class="custom-link">
-                    kic8462852@naver.com
-                    <i class="bi-arrow-right ms-2"></i>
-                  </a>
-                </div>
-
-                <div class="col-6 border-top contact-info">
-                  <h6 class="mb-3">Socials</h6>
-                  <a
-                    href="https://www.instagram.com/aidrawinglab/"
-                    target="_blank"
-                    class="social-icon-link bi-instagram"
-                  ></a>
-                  <a
-                    href="https://www.youtube.com/channel/UCaxCSp5RzCo6JpVYj18HTmQ"
-                    target="_blank"
-                    class="social-icon-link bi-youtube"
-                  ></a>
-                </div>
+                <a href="mailto:kic8462852@naver.com" class="custom-link">
+                  kic8462852@naver.com
+                  <i class="bi-arrow-right ms-2"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -165,6 +149,10 @@
             <h5 class="text-white mb-3">Sitemap</h5>
 
             <ul class="footer-menu flex-wrap">
+              <li class="footer-menu-item">
+                <a href="index.html" class="footer-menu-link">Home</a>
+              </li>
+
               <li class="footer-menu-item">
                 <a href="story.html" class="footer-menu-link">Story</a>
               </li>
