--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="" />
+    <meta name="description" content="innovation, 혁신을 말하다. 이노딕트, innodict" />
     <meta name="author" content="" />
 
     <title>Welcome to INNODICT</title>
@@ -33,11 +33,11 @@
   </head>
 
   <body>
-    <section class="preloader">
+    <!-- <section class="preloader">
       <div class="spinner">
         <span class="sk-inner-circle"></span>
       </div>
-    </section>
+    </section> -->
 
     <main>
       <nav class="navbar navbar-expand-lg">
@@ -172,6 +172,10 @@
             <h5 class="text-white mb-3">Sitemap</h5>
 
             <ul class="footer-menu flex-wrap">
+              <li class="footer-menu-item">
+                <a href="index.html" class="footer-menu-link">Home</a>
+              </li>
+              
               <li class="footer-menu-item">
                 <a href="story.html" class="footer-menu-link">Story</a>
               </li>
