--- a/story.html
+++ b/story.html
@@ -237,6 +237,10 @@
   
               <ul class="footer-menu flex-wrap">
                 <li class="footer-menu-item">
+                  <a href="index.html" class="footer-menu-link">Home</a>
+                </li>
+                
+                <li class="footer-menu-item">
                   <a href="story.html" class="footer-menu-link">Story</a>
                 </li>
   
