--- a/contact.html
+++ b/contact.html
@@ -106,26 +106,17 @@
                 </span>
               </h1>
             </div>
-          </div>
-        </div>
-      </header>
 
-      <section class="contact section-padding">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 col-12 mt-5 ms-auto">
-              <div class="col-6 border-top contact-info">
-                <h6 class="mb-3">e-mail</h6>
-
-                <a href="mailto:kic8462852@naver.com" class="custom-link">
-                  kic8462852@naver.com
-                  <i class="bi-arrow-right ms-2"></i>
-                </a>
-              </div>
+            <div class="col-lg-12 col-12">
+              <h6><br />e-mail</h6>
+              <a href="mailto:kic8462852@naver.com" class="custom-link">
+                kic8462852@naver.com
+                <i class="bi-arrow-right ms-2"></i>
+              </a>
             </div>
           </div>
         </div>
-      </section>
+      </header>
     </main>
 
     <footer class="site-footer">
