--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     “Innovation is the ability to see change as an opportunity -
                     not a threat” - Steve Jobs <br />
                     “Unfound opportunities are always the result of innovation.”
-                    - John F. Kennedy <br />
-                    “True innovation begins when you are not afraid of change.”
-                    - Albert Einstein
+                    - John F. Kennedy>
+                    <!-- “True innovation begins when you are not afraid of change.”
+                    - Albert Einstein -->
                   </p>
 
                   <a href="innovation.html" class="btn custom-btn">
