--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="author" content="" />
 
     <title>Welcome to INNODICT</title>
+    <link rel="icon" href="/favicon.png" type="image/png" />
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
