--- a/story.html
+++ b/story.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
 
     <title>Welcome to INNODICT</title>
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
